#добавил поля - на автосвойствах не отображадлись значения (возможно, что не срабатывала сериализация)

--- a/StudyAssist/MainWindow.xaml
+++ b/StudyAssist/MainWindow.xaml
@@ -125,7 +125,7 @@
                                         Style="{StaticResource XStyleToButton}"
                                         Command="{Binding SelectedCategory.SelectedTheme.SelectedProblem.RemoveFromStudyCommand}">
                                 </Button>
-                                <Button 
+                                <!--<Button 
                                     Content="Повысить уровень" 
                                     Margin="3"  
                                     Height="Auto" 
@@ -140,7 +140,7 @@
                                     Style="{StaticResource XStyleToButton}"
                                     Command="{Binding SelectedCategory.SelectedToRepeatTheme.SelectedProblemToRepeat.LevelDownCommand}">
                                     
-                                </Button>
+                                </Button>-->
 
 
                             </StackPanel>
