--- a/StudyAssist/App.xaml
+++ b/StudyAssist/App.xaml
@@ -1,9 +1,11 @@
 ﻿<Application x:Class="StudyAssist.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:StudyAssist"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:StudyAssist" xmlns:Properties="clr-namespace:StudyAssist.Properties"
+             StartupUri="MainWindow.xaml"
+             >
     <Application.Resources>
+        
         <Style x:Name="XColors" x:Key="XStyleToButton" TargetType="Button" >
             <Setter Property="Background" Value="LightSteelBlue" />
             <Setter Property="BorderThickness" Value="0"></Setter>
@@ -71,6 +73,7 @@
         </Style>
 
         <DataTemplate x:Key="dw" DataType="local:XPlotControl" ></DataTemplate>
-
+        <Properties:Settings x:Key="Settings"/>
     </Application.Resources>
+
 </Application>
