--- a/StudyAssist/MainWindow.xaml
+++ b/StudyAssist/MainWindow.xaml
@@ -296,6 +296,7 @@
                         <RowDefinition Height="30"></RowDefinition>
                         <RowDefinition Height="30"></RowDefinition>
                         <RowDefinition Height="30"></RowDefinition>
+                        <RowDefinition Height="30"></RowDefinition>
 
                     </Grid.RowDefinitions>  
                     <Grid.ColumnDefinitions>
@@ -310,9 +311,15 @@
                             Content="Снять всё с обучения"
                             Command="{Binding RemoveAllFromStudy}"
                             Height="30" />
-
-                    <Label Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right">Разделы для отображения (через пробел):</Label>
-                    <TextBox Grid.Row="2" Grid.Column="2" Text="{Binding Source={StaticResource Settings}, Path=Default.DefaultCategories}"></TextBox>
+                    <Button Style="{StaticResource XStyleToButton}" 
+                            Width="Auto" Grid.Row="2" Grid.Column="1" 
+                            Content="Перенести повторение на несколько дней:"
+                            Command="{Binding RescheduleForFewDays}"
+                            Height="30" />
+                    <TextBox Grid.Row="2" Grid.Column="2" Width="100" HorizontalAlignment="Left" Text="{Binding RescheduledDays}"></TextBox>
+                    
+                    <Label Grid.Row="3" Grid.Column="1" HorizontalAlignment="Right">Разделы для отображения (через пробел):</Label>
+                    <TextBox Grid.Row="3" Grid.Column="2" Text="{Binding Source={StaticResource Settings}, Path=Default.DefaultCategories}"></TextBox>
                     
                 </Grid>
                     
